--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Pets World</string>
+    <string name="regName">Nombre</string>
+    <string name="regEmail">Correo</string>
+    <string name="regPass">Contraseña</string>
+    <string name="regBtn">Ingresar</string>
+
 </resources>
