--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,15 +5,25 @@
     <string name="regPass">Contraseña</string>
     <string name="regBtn">Registrarse</string>
     <string name="loginBtn">Ingresar</string>
-    <string name="title_activity_home_nav">HomeNav</string>
+    <string name="loginRegister">¿Aún sin una cuenta? Créate una!</string>
+    <string name="regLogin">Ya estoy registrado!</string>
+    <string name="addpetsMesage">Hola! Aquí podrás poner en adopción a tu mascota. Solo tienes que ingresar sus datos :D</string>
+    <string name="addpetName">¿Cuál es el nombre de tu mascota?</string>
+    <string name="addpetMacho">Machito</string>
+    <string name="addpetHembra">Hembrita</string>
+    <string name="addpetTipo">¿Qué es tu mascota?</string>
+    <string name="addpetPeso">¿Cuánto pesa tu mascota?</string>
+    <string name="addpetColor">¿Cuál es el color de tu mascota?</string>
+    <string name="addpetContacto">Celular para que te contacten</string>
+    <string name="addpetComentario">¿Algún comentario sobre tu mascota?</string>
+    <string name="addpetBtnAcept">Guardar</string>
+    <string name="addpetBtnCancel">Cancelar</string>
+    <string name="title_activity_home_nav">Inicio</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
