--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,15 @@
 <resources>
     <string name="app_name">Pets World</string>
+    <!--Register Activity-->
     <string name="regName">Nombre</string>
     <string name="regEmail">Correo</string>
     <string name="regPass">Contraseña</string>
     <string name="regBtn">Registrarse</string>
+    <!--Login activity-->
     <string name="loginBtn">Ingresar</string>
     <string name="loginRegister">¿Aún sin una cuenta? Créate una!</string>
     <string name="regLogin">Ya estoy registrado!</string>
+    <!--Add pets activity-->
     <string name="addpetsMesage">Hola! Aquí podrás poner en adopción a tu mascota. Solo tienes que ingresar sus datos :D</string>
     <string name="addpetName">¿Cuál es el nombre de tu mascota?</string>
     <string name="addpetMacho">Machito</string>
@@ -18,6 +21,9 @@
     <string name="addpetComentario">¿Algún comentario sobre tu mascota?</string>
     <string name="addpetBtnAcept">Guardar</string>
     <string name="addpetBtnCancel">Cancelar</string>
+    <!--Profile fragment-->
+    <string name="profileBtn">Cambiar datos</string>
+    <!--Others-->
     <string name="title_activity_home_nav">Inicio</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -25,5 +31,8 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
